Fix flair on mobile latest topic view

--- a/assets/stylesheets/whos_online.scss
+++ b/assets/stylesheets/whos_online.scss
@@ -49,7 +49,7 @@ html.whos-online-glow {
    box-shadow: 0 0 2px 1px lighten($success, 30%);   
   }
 
-  .mobile-view .topic-list-item.last-poster-online img.avatar{
+  &.mobile-view .topic-list-item.last-poster-online img.avatar{
     box-shadow: 0 0 4px 1px lighten($success, 30%);
   }
 
@@ -97,10 +97,13 @@ html.whos-online-flair {
     width: 7px;
   }
 
+  &.mobile-view .topic-list-item.last-poster-online div.pull-left{
+    position: relative;
+  }
   &.mobile-view .topic-list-item.last-poster-online div.pull-left::before{
     @extend .whos-online-flair-prototype;
-    top: 8px;
-    left: 1px;
+    top: -1px;
+    left: -1px;
     height: 10px;
     width: 10px;
   }
